# open-shaders

./: .gitattributes  .gitignore  AI-INSTRUCTIONS.md  API.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Particle-Lights-fork-Installation.md  README.md  TBshadow.md  TRANSLATING.md  containerbuild.ps1  load-save-issue.md  vcpkg-configuration.json  vcpkg.json
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/configs/: generate-shader-configs.ps1  shader-validation-vr.yaml  shader-validation.yaml
.github/workflows/: _ci-selftest.yaml  _shared-build.yaml  auto-rebase-prs.yaml  build.yaml  ci-test.yaml  cleanup-pre-releases.yaml  maint-cleanup-releases.yaml  maint-update-wiki.yaml  maint-upstream-sync.yaml  nexus-upload.yaml  pr-checks.yaml  pr-i18n.yaml  promote-pr-build-to-dev.yml  release-build.yaml  release-dev.yaml  release-hotfix.yaml  release-semantic.yaml  shader-cache.yaml  update-buffers-wiki.yaml  upload-nexus.yaml
build-test/: CMakeCache.txt
cmake/: XSEPlugin.cmake  cpp-mcp.cmake
docs/: FEATURE_NOTES.md  TB_VR_NOTES.md
docs/development/: README.md  release-validation.md  shader-decomposition-plan.md  shader-runtime-ab.md  shader-workflow.md  taa-runtime-ab.md  upstream-sync.md  vscode-setup.md
docs/new-feature-template/: NewFeatureReadme.md
include/: FeatureVersions.h  test_workflow_trigger.h
include/FidelityFX/: LICENSE.md
include/VRAPI/: CSinterface001.h  CSpluginapi.h
package/Shaders/: AmbientCompositeCS.hlsl  DeferredCompositeCS.hlsl  DistantTree.hlsl  Effect.hlsl  EffectPS.hlsli  EffectPS_Lighting.hlsli  EffectVS.hlsli  ISBlur.hlsl  ISLightingComposite.hlsl  ISReflectionsRayTracing.hlsl  ISRefraction.hlsl  ISTemporalAA.hlsl  ISWaterBlend.hlsl  Lighting.hlsl  LightingPS.hlsli  LightingPS_Helpers.hlsli  LightingPS_Landscape.hlsli  LightingPS_LightLoop.hlsli  LightingPS_Resources.hlsli  LightingVS.hlsli  Particle.hlsl  RunGrass.hlsl  RunGrassPS.hlsli  RunGrassVS.hlsli  Sky.hlsl  Utility.hlsl  UtilityPS.hlsli  UtilityVS.hlsli  Water.hlsl  WaterPS.hlsli  WaterPS_Helpers.hlsli  WaterPS_Resources.hlsli  WaterVS.hlsli  test_workflow_common.hlsli
src/: ConsoleLogCapture.cpp  ConsoleLogCapture.h  Deferred.cpp  Deferred.h  DevBenchBridge.cpp  DevBenchBridge.h  Feature.cpp  Feature.h  FeatureBuffer.cpp  FeatureIssues.cpp  FidelityFX.cpp  FidelityFX.h  FrameAnnotations.cpp  Globals.cpp  Globals.h  GpuPass.cpp  GpuPass.h  Hooks.cpp  Hooks.h  Menu.cpp  Menu.h  Profiler.cpp  Profiler.h  SettingsOverrideManager.h  ShaderCache.cpp  ShaderCache.h  State.cpp  State.h  Streamline.cpp  TruePBR.cpp  TruePBR.h  Upscaling.cpp  Upscaling.h  VRImGui.h  XSEPlugin.cpp  XeSS.cpp  test_workflow_trigger.cpp
tests/: README.md  TROUBLESHOOTING.md  test_configuration.cpp  test_simple_utilities.cpp
tests/cpp/: CMakeLists.txt  i18n_stub.cpp  test_bootsnapshot.cpp  test_cacheinvalidation.cpp  test_formulahelper.cpp  test_hdr_png_metadata.cpp  test_input.cpp  test_isl_radiusmath.cpp  test_llf_sanitize.cpp  test_perfutils.cpp  test_prelude.h  test_restartsettings.cpp  test_shadowcaster_math.cpp  test_sphericalharmonics.cpp  test_stringutils.cpp  test_subrect.cpp
tools/: build-shader-cache.py  feature_version_audit.py  gen-clangd-db.ps1  gen-verify-perms.py  shader-compile-bench.ps1  taa-renderdoc-ab.py  update-vendored-stb-hdr-png.ps1  validate_changed_shaders.py  verify-shader-refactor.ps1
(+366 files in other folders)
